--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
+html {
+   box-sizing: border-box;
+   /* box-sizing: padding-box; 
+   box-sizing: margin-box;  */
 
+
+}
 .errMsg{
   background-color: #e57373;
   margin-top: 3px;
