two dropdowns change on depended added

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,16 @@ html {
   margin-top: 8px;
   margin-bottom: 12px;
 }
+
+.DropDowndiv{
+  /* border: 5px solid black; */
+  /* background-color: cadetblue; */
+  margin-top: 100px;
+  /* margin-left: 500px; */
+}
+
+.DropdwonDiv{
+  border: 5px solid black;
+  margin-top: 100px;
+  padding:50px
+}
